k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qubot
  labels:
    name: qubot
    app.kubernetes.io/name: qubot
    app.kubernetes.io/version: "1.0.0"
